--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -7,7 +7,7 @@ Hotkey=q
 [explorer]
 Modkeys=alt
 Hotkey=OEM_3
-Launch=C:\Windows\explorer.exe
+Launch=explorer.exe
 
 [notepad++]
 Modkeys=alt
@@ -136,10 +136,6 @@ Hotkey=t
 Launch=powershell.exe
 Args=/c ".\scripts\terminal_a.ps1"
 Hide=true
-
-
-
-
 
 
 
