--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -1,6 +1,7 @@
-# These undefined hotkey options defines the toggle keycombo
-# This is mandatory for the daemon to work
-# but you can change the keys to what you want
+# This is my hotkeyD config.
+# I prefer to use batch files so I don't have to re-launch hotkeyD itself.
+# Makes it easier for me to edit things. 
+
 Modkeys=ctrl+alt
 Hotkey=q
 
