--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -139,6 +139,14 @@ Launch=powershell.exe
 Args=/c ".\scripts\terminal_a.ps1"
 Hide=true
 
+[lock]
+Modkeys=alt
+Hotkey=l
+Launch=cmd.exe
+Args=/c ".\scripts\lock.bat"
+Hide=true
+
+
 
 
 #[test]
