--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -2,6 +2,8 @@
 # I prefer to use batch files so I don't have to re-launch hotkeyD itself.
 # Makes it easier for me to edit things. 
 # https://github.com/HikariKnight/hotkeyD
+# https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
+# NOTE: If you use advanced keys. Ensure to remove "VK_" from the keycode as shown in this conf.
 
 Modkeys=ctrl+alt
 Hotkey=q
@@ -10,6 +12,13 @@ Hotkey=q
 Modkeys=alt
 Hotkey=OEM_3
 Launch=explorer.exe
+
+[taskmgr]
+Modkeys=alt+shift
+Hotkey=DELETE
+Launch=cmd.exe
+Args=/c ".\scripts\taskmgr.bat"
+Hide=true
 
 [notepad++]
 Modkeys=alt
@@ -32,11 +41,25 @@ Launch=cmd.exe
 Args=/c ".\scripts\hotkeydir.bat"
 Hide=true
 
+[desktopdir]
+Modkeys=alt
+Hotkey=d
+Launch=cmd.exe
+Args=/c ".\scripts\desktopdir.bat"
+Hide=true
+
 [browser]
 Modkeys=alt
 Hotkey=1
 Launch=cmd.exe
-Args=/c "start https://duckduckgo.com/"
+Args=/c ".\scripts\brave.bat"
+Hide=true
+
+[browser-nw]
+Modkeys=alt+shift
+Hotkey=1
+Launch=cmd.exe
+Args=/c ".\scripts\brave-nw.bat"
 Hide=true
 
 [streamlink-twitch-gui]
@@ -148,10 +171,9 @@ Hide=true
 
 
 
-
 #[test]
 #Modkeys=alt
-#Hotkey=VK_F3
+#Hotkey=F13
 #Launch=notepad.exe
 
 
