hotkeyd config update

--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -5,163 +5,161 @@
 # https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
 # NOTE: If you use advanced keys. Ensure to remove "VK_" from the keycode as shown in this conf.
 
+#Kills hotkeyd
+[kill-hotkeyd]
 Modkeys=ctrl+alt
 Hotkey=q
-
+Launch=cmd.exe
+Args=/c "tskill hotkeyd"
+Hide=true
+#Opens explorer
 [explorer]
 Modkeys=alt
 Hotkey=OEM_3
 Launch=explorer.exe
-
+#Opens Task manager
 [taskmgr]
 Modkeys=alt+shift
 Hotkey=DELETE
 Launch=cmd.exe
 Args=/c ".\scripts\taskmgr.bat"
 Hide=true
-
+#Opens Notepad++
 [notepad++]
 Modkeys=alt
 Hotkey=n
 Launch=cmd.exe
 Args=/c ".\scripts\notepad++.bat"
 Hide=true
-
-[downloads]
+#Opens the users download dir
+[download-dir]
 Modkeys=alt
 Hotkey=j
 Launch=cmd.exe
 Args=/c ".\scripts\downloads.bat"
 Hide=true
-
-[hotkeydir]
+#Opens the hotkeyd dir
+[hotkeyd-dir]
 Modkeys=alt
 Hotkey=k
 Launch=cmd.exe
 Args=/c ".\scripts\hotkeydir.bat"
 Hide=true
-
-[desktopdir]
+#Opens the desktop dir
+[desktop-dir]
 Modkeys=alt
 Hotkey=d
 Launch=cmd.exe
 Args=/c ".\scripts\desktopdir.bat"
 Hide=true
-
+#Opens Brave web browser
 [browser]
 Modkeys=alt
 Hotkey=1
 Launch=cmd.exe
 Args=/c ".\scripts\brave.bat"
 Hide=true
-
+#Opens Brave web browser as a new window
 [browser-nw]
 Modkeys=alt+shift
 Hotkey=1
 Launch=cmd.exe
 Args=/c ".\scripts\brave-nw.bat"
 Hide=true
-
+#Opens streamlink-twitch-gui with luminous-ttv
 [streamlink-twitch-gui]
 Modkeys=alt
 Hotkey=2
 Launch=cmd.exe
 Args=/c ".\scripts\streamlink.bat"
 Hide=true
-
+#Opens steam
 [steam]
 Modkeys=alt
 Hotkey=9
 Launch=cmd.exe
 Args=/c ".\scripts\steam.bat"
 Hide=true
-
+#Opens discord in browser
 [discord]
 Modkeys=alt
 Hotkey=4
 Launch=cmd.exe
-Args=/c ".\scripts\discord.bat"
+Args=/c ".\scripts\discord-web.bat"
 Hide=true
-
-[notes]
+#Opens standard notes
+[standardnotes]
 Modkeys=alt
 Hotkey=5
 Launch=cmd.exe
 Args=/c ".\scripts\standard-notes.bat"
 Hide=true
-
+#Opens spotify and toastify
 [spotify]
 Modkeys=alt
 Hotkey=6
 Launch=cmd.exe
 Args=/c ".\scripts\spotify.bat"
 Hide=true
-
+#Opens voicemeeter banana
 [voicemeeter]
 Modkeys=alt
 Hotkey=7
 Launch=cmd.exe
 Args=/c ".\scripts\voicemeeter.bat"
 Hide=true
-
+#Restarts voicemeeter bananas macro app
 [voicemeeter_macro_r]
 Modkeys=alt
 Hotkey=8
 Launch=cmd.exe
 Args=/c ".\scripts\macro_restart.bat"
 Hide=true
-
+#Opens windows update
 [update]
 Modkeys=alt
 Hotkey=3
 Launch=cmd.exe
 Args=/c ".\scripts\update.bat"
 Hide=true
-
+#Opens windows add/remove programs
 [add/remove]
 Modkeys=alt
 Hotkey=OEM_MINUS
 Launch=cmd.exe
 Args=/c ".\scripts\add-remove.bat"
 Hide=true
-
+#Opens windows calculator
 [calc]
 Modkeys=alt
 Hotkey=MULTIPLY
 Launch=calc.exe
-
+#Opens putty for ssh
 [putty]
 Modkeys=alt
 Hotkey=p
 Launch=cmd.exe
 Args=/c ".\scripts\putty.bat"
 Hide=true
-
-[kill hotkeyD]
-Modkeys=alt+win
-Hotkey=q
-Launch=cmd.exe
-Args=/c "tskill hotkeyd"
-Hide=true
-
+#Closes the active window
 [CloseWindow]
 Modkeys=alt+shift
 Hotkey=q
-
+#Opens windows terminal
 [terminal]
 Modkeys=ctrl+alt
 Hotkey=t
 Launch=cmd.exe
 Args=/c ".\scripts\terminal.bat"
 Hide=true
-
+#Opens windows terminal as admin
 [terminal_a]
 Modkeys=ctrl+alt+shift
 Hotkey=t
-Launch=powershell.exe
-Args=/c ".\scripts\terminal_a.ps1"
+Launch=cmd.exe
+Args=/c ".\scripts\terminal_a.bat"
 Hide=true
-
+#Locks the computer
 [lock]
 Modkeys=alt
 Hotkey=l
@@ -170,7 +168,7 @@ Args=/c ".\scripts\lock.bat"
 Hide=true
 
 
-
+#For testing purposes
 #[test]
 #Modkeys=alt
 #Hotkey=F13
