re-added hotkeyd initial config lines

--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -5,6 +5,11 @@
 # https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
 # NOTE: If you use advanced keys. Ensure to remove "VK_" from the keycode as shown in this conf.
 
+#Prevents hotkeyd from crashing?
+Modkeys=ctrl+alt
+Hotkey=q
+
+
 #Kills hotkeyd
 [kill-hotkeyd]
 Modkeys=ctrl+alt
