cleaned hotkeyd config/scripts

--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -5,10 +5,149 @@
 # https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
 # NOTE: If you use advanced keys. Ensure to remove "VK_" from the keycode as shown in this conf.
 
-#Prevents hotkeyd from crashing?
-Modkeys=ctrl+alt
+#Prevents hotkeyd from crashing
+#Default kill hey, unreliable
+#Ensure this bind is different than [kill-hotkeyd]
+Modkeys=ctrl+shift
 Hotkey=q
 
+#Windows explorer
+
+#Opens explorer
+[explorer]
+Modkeys=alt
+Hotkey=OEM_3
+Launch=explorer.exe
+
+#Opens the users download dir
+[download-dir]
+Modkeys=alt
+Hotkey=j
+Launch=cmd.exe
+Args=/c explorer.exe "C:\Users\%username%\Downloads"
+Hide=true
+
+#Opens the hotkeyd dir
+[hotkeyd-dir]
+Modkeys=alt
+Hotkey=k
+Launch=cmd.exe
+Args=/c explorer.exe "C:\Users\%username%\Documents\hotkeyd"
+Hide=true
+
+#Opens the desktop dir
+[desktop-dir]
+Modkeys=alt
+Hotkey=d
+Launch=cmd.exe
+Args=/c explorer.exe "C:\Users\%username%\Desktop"
+Hide=true
+
+#Media applications
+
+#Opens Brave web browser
+[browser]
+Modkeys=alt
+Hotkey=1
+Launch=cmd.exe
+Args=/c ".\scripts\brave.bat"
+Hide=true
+
+#Opens Brave web browser as a new window
+[browser-nw]
+Modkeys=alt+shift
+Hotkey=1
+Launch=cmd.exe
+Args=/c ".\scripts\brave-nw.bat"
+Hide=true
+
+#Opens streamlink-twitch-gui with luminous-ttv
+[streamlink-twitch-gui]
+Modkeys=alt
+Hotkey=2
+Launch=cmd.exe
+Args=/c ".\scripts\streamlink.bat"
+Hide=true
+
+#Opens steam
+[steam]
+Modkeys=alt
+Hotkey=9
+Launch=cmd.exe
+Args=/c ".\scripts\steam.bat"
+Hide=true
+
+#Opens discord in browser
+[discord-web]
+Modkeys=alt
+Hotkey=4
+Launch=cmd.exe
+Args=/c ".\scripts\discord-web.bat"
+Hide=true
+
+#Opens standard notes
+[standard-notes]
+Modkeys=alt
+Hotkey=5
+Launch=cmd.exe
+Args=/c ".\scripts\standard-notes.bat"
+Hide=true
+
+#Opens spotify and toastify
+[spotify]
+Modkeys=alt
+Hotkey=6
+Launch=cmd.exe
+Args=/c ".\scripts\spotify.bat"
+Hide=true
+
+#Opens voicemeeter banana
+[voicemeeter]
+Modkeys=alt
+Hotkey=7
+Launch=cmd.exe
+Args=/c ".\scripts\voicemeeter.bat"
+Hide=true
+
+#Misc admin stuff
+
+#Opens windows update
+[update]
+Modkeys=alt
+Hotkey=3
+Launch=cmd.exe
+Args=/c start ms-settings:windowsupdate
+Hide=true
+
+#Opens windows add/remove programs
+[add/remove]
+Modkeys=alt
+Hotkey=OEM_MINUS
+Launch=cmd.exe
+Args=/c start ms-settings:appsfeatures
+Hide=true
+
+#Opens windows calculator
+[calc]
+Modkeys=alt
+Hotkey=MULTIPLY
+Launch=calc.exe
+
+#Opens putty for ssh
+[putty]
+Modkeys=alt
+Hotkey=p
+Launch=cmd.exe
+Args=/c ".\scripts\putty.bat"
+Hide=true
+
+#Opens Notepad++
+[notepad++]
+Modkeys=alt
+Hotkey=n
+Launch=cmd.exe
+Args=/c ".\scripts\notepad++.bat"
+Hide=true
 
 #Kills hotkeyd
 [kill-hotkeyd]
@@ -17,146 +156,28 @@ Hotkey=q
 Launch=cmd.exe
 Args=/c "tskill hotkeyd"
 Hide=true
-#Opens explorer
-[explorer]
-Modkeys=alt
-Hotkey=OEM_3
-Launch=explorer.exe
+
 #Opens Task manager
 [taskmgr]
 Modkeys=alt+shift
 Hotkey=DELETE
 Launch=cmd.exe
-Args=/c ".\scripts\taskmgr.bat"
+Args=/c start taskmgr.exe
 Hide=true
-#Opens Notepad++
-[notepad++]
-Modkeys=alt
-Hotkey=n
-Launch=cmd.exe
-Args=/c ".\scripts\notepad++.bat"
-Hide=true
-#Opens the users download dir
-[download-dir]
-Modkeys=alt
-Hotkey=j
-Launch=cmd.exe
-Args=/c ".\scripts\downloads.bat"
-Hide=true
-#Opens the hotkeyd dir
-[hotkeyd-dir]
-Modkeys=alt
-Hotkey=k
-Launch=cmd.exe
-Args=/c ".\scripts\hotkeydir.bat"
-Hide=true
-#Opens the desktop dir
-[desktop-dir]
-Modkeys=alt
-Hotkey=d
-Launch=cmd.exe
-Args=/c ".\scripts\desktopdir.bat"
-Hide=true
-#Opens Brave web browser
-[browser]
-Modkeys=alt
-Hotkey=1
-Launch=cmd.exe
-Args=/c ".\scripts\brave.bat"
-Hide=true
-#Opens Brave web browser as a new window
-[browser-nw]
-Modkeys=alt+shift
-Hotkey=1
-Launch=cmd.exe
-Args=/c ".\scripts\brave-nw.bat"
-Hide=true
-#Opens streamlink-twitch-gui with luminous-ttv
-[streamlink-twitch-gui]
-Modkeys=alt
-Hotkey=2
-Launch=cmd.exe
-Args=/c ".\scripts\streamlink.bat"
-Hide=true
-#Opens steam
-[steam]
-Modkeys=alt
-Hotkey=9
-Launch=cmd.exe
-Args=/c ".\scripts\steam.bat"
-Hide=true
-#Opens discord in browser
-[discord]
-Modkeys=alt
-Hotkey=4
-Launch=cmd.exe
-Args=/c ".\scripts\discord-web.bat"
-Hide=true
-#Opens standard notes
-[standardnotes]
-Modkeys=alt
-Hotkey=5
-Launch=cmd.exe
-Args=/c ".\scripts\standard-notes.bat"
-Hide=true
-#Opens spotify and toastify
-[spotify]
-Modkeys=alt
-Hotkey=6
-Launch=cmd.exe
-Args=/c ".\scripts\spotify.bat"
-Hide=true
-#Opens voicemeeter banana
-[voicemeeter]
-Modkeys=alt
-Hotkey=7
-Launch=cmd.exe
-Args=/c ".\scripts\voicemeeter.bat"
-Hide=true
-#Restarts voicemeeter bananas macro app
-[voicemeeter_macro_r]
-Modkeys=alt
-Hotkey=8
-Launch=cmd.exe
-Args=/c ".\scripts\macro_restart.bat"
-Hide=true
-#Opens windows update
-[update]
-Modkeys=alt
-Hotkey=3
-Launch=cmd.exe
-Args=/c ".\scripts\update.bat"
-Hide=true
-#Opens windows add/remove programs
-[add/remove]
-Modkeys=alt
-Hotkey=OEM_MINUS
-Launch=cmd.exe
-Args=/c ".\scripts\add-remove.bat"
-Hide=true
-#Opens windows calculator
-[calc]
-Modkeys=alt
-Hotkey=MULTIPLY
-Launch=calc.exe
-#Opens putty for ssh
-[putty]
-Modkeys=alt
-Hotkey=p
-Launch=cmd.exe
-Args=/c ".\scripts\putty.bat"
-Hide=true
+
 #Closes the active window
 [CloseWindow]
 Modkeys=alt+shift
 Hotkey=q
+
 #Opens windows terminal
 [terminal]
 Modkeys=ctrl+alt
 Hotkey=t
 Launch=cmd.exe
-Args=/c ".\scripts\terminal.bat"
+Args=/c start wt.exe
 Hide=true
+
 #Opens windows terminal as admin
 [terminal_a]
 Modkeys=ctrl+alt+shift
@@ -164,13 +185,42 @@ Hotkey=t
 Launch=cmd.exe
 Args=/c ".\scripts\terminal_a.bat"
 Hide=true
+
 #Locks the computer
 [lock]
 Modkeys=alt
 Hotkey=l
 Launch=cmd.exe
-Args=/c ".\scripts\lock.bat"
+Args=/c Rundll32.exe user32.dll,LockWorkStation
 Hide=true
+
+#Media key scripts
+
+#Presses the next track media key
+[next-track]
+Modkeys=ctrl+shift
+Hotkey=RIGHT
+Launch=powershell.exe
+Args=-ExecutionPolicy RemoteSigned -File ".\scripts\next-track.ps1"
+Hide=true
+
+#Presses the previous track media key
+[previous-track]
+Modkeys=ctrl+shift
+Hotkey=LEFT
+Launch=powershell.exe
+Args=-ExecutionPolicy RemoteSigned -File ".\scripts\previous-track.ps1"
+Hide=true
+
+#Presses the play/pause track media key
+[pause-track]
+Modkeys=ctrl+shift
+Hotkey=SPACE
+Launch=powershell.exe
+Args=-ExecutionPolicy RemoteSigned -File ".\scripts\pause-track.ps1"
+Hide=true
+
+
 
 
 #For testing purposes
