--- a/hotkeyD_config/hotkeys.ini
+++ b/hotkeyD_config/hotkeys.ini
@@ -1,55 +1,54 @@
-# This is my hotkeyD config.
-# I prefer to use batch files so I don't have to re-launch hotkeyD itself.
-# Makes it easier for me to edit things. 
+# Sokolofts hotkeyD config.
+
 # https://github.com/HikariKnight/hotkeyD
 # https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
 # NOTE: If you use advanced keys. Ensure to remove "VK_" from the keycode as shown in this conf.
 
 #Prevents hotkeyd from crashing
-#Default kill hey, unreliable
+#Default kill key, unreliable
 #Ensure this bind is different than [kill-hotkeyd]
 Modkeys=ctrl+shift
 Hotkey=q
 
-#Windows explorer
+# Windows explorer
 
 #Opens explorer
 [explorer]
 Modkeys=alt
 Hotkey=OEM_3
-Launch=explorer.exe
+Launch=explorer
 
 #Opens the users download dir
 [download-dir]
 Modkeys=alt
 Hotkey=j
-Launch=cmd.exe
-Args=/c explorer.exe "C:\Users\%username%\Downloads"
+Launch=cmd
+Args=/c explorer "C:\Users\%username%\Downloads"
 Hide=true
 
 #Opens the hotkeyd dir
 [hotkeyd-dir]
 Modkeys=alt
 Hotkey=k
-Launch=cmd.exe
-Args=/c explorer.exe "C:\Users\%username%\Documents\hotkeyd"
+Launch=cmd
+Args=/c explorer "C:\Users\%username%\Documents\hotkeyd"
 Hide=true
 
 #Opens the desktop dir
 [desktop-dir]
 Modkeys=alt
 Hotkey=d
-Launch=cmd.exe
-Args=/c explorer.exe "C:\Users\%username%\Desktop"
+Launch=cmd
+Args=/c explorer "C:\Users\%username%\Desktop"
 Hide=true
 
-#Media applications
+# Media applications
 
 #Opens Brave web browser
 [browser]
 Modkeys=alt
 Hotkey=1
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\brave.bat"
 Hide=true
 
@@ -57,7 +56,7 @@ Hide=true
 [browser-nw]
 Modkeys=alt+shift
 Hotkey=1
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\brave-nw.bat"
 Hide=true
 
@@ -65,7 +64,7 @@ Hide=true
 [streamlink-twitch-gui]
 Modkeys=alt
 Hotkey=2
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\streamlink.bat"
 Hide=true
 
@@ -73,15 +72,15 @@ Hide=true
 [steam]
 Modkeys=alt
 Hotkey=9
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\steam.bat"
 Hide=true
 
-#Opens discord in browser
+#Opens discord in brave browser
 [discord-web]
 Modkeys=alt
 Hotkey=4
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\discord-web.bat"
 Hide=true
 
@@ -89,15 +88,15 @@ Hide=true
 [standard-notes]
 Modkeys=alt
 Hotkey=5
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\standard-notes.bat"
 Hide=true
 
-#Opens spotify and toastify
+#Opens spotify
 [spotify]
 Modkeys=alt
 Hotkey=6
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\spotify.bat"
 Hide=true
 
@@ -105,39 +104,39 @@ Hide=true
 [voicemeeter]
 Modkeys=alt
 Hotkey=7
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\voicemeeter.bat"
 Hide=true
 
-#Misc admin stuff
+# Misc admin stuff
 
 #Opens windows update
 [update]
 Modkeys=alt
 Hotkey=3
-Launch=cmd.exe
-Args=/c start ms-settings:windowsupdate
+Launch=powershell
+Args=start ms-settings:windowsupdate
 Hide=true
 
 #Opens windows add/remove programs
 [add/remove]
 Modkeys=alt
 Hotkey=OEM_MINUS
-Launch=cmd.exe
-Args=/c start ms-settings:appsfeatures
+Launch=powershell
+Args=start ms-settings:appsfeatures
 Hide=true
 
 #Opens windows calculator
 [calc]
 Modkeys=alt
 Hotkey=MULTIPLY
-Launch=calc.exe
+Launch=calc
 
 #Opens putty for ssh
 [putty]
 Modkeys=alt
 Hotkey=p
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\putty.bat"
 Hide=true
 
@@ -145,24 +144,24 @@ Hide=true
 [notepad++]
 Modkeys=alt
 Hotkey=n
-Launch=cmd.exe
+Launch=cmd
 Args=/c ".\scripts\notepad++.bat"
 Hide=true
 
-#Kills hotkeyd
+#Kills hotkeyd process
 [kill-hotkeyd]
 Modkeys=ctrl+alt
 Hotkey=q
-Launch=cmd.exe
-Args=/c "tskill hotkeyd"
+Launch=powershell
+Args=Stop-Process -Name hotkeyd
 Hide=true
 
 #Opens Task manager
 [taskmgr]
 Modkeys=alt+shift
 Hotkey=DELETE
-Launch=cmd.exe
-Args=/c start taskmgr.exe
+Launch=powershell
+Args=Start-Process taskmgr -Verb runAs
 Hide=true
 
 #Closes the active window
@@ -174,24 +173,24 @@ Hotkey=q
 [terminal]
 Modkeys=ctrl+alt
 Hotkey=t
-Launch=cmd.exe
-Args=/c start wt.exe
+Launch=powershell
+Args=Start-Process wt
 Hide=true
 
 #Opens windows terminal as admin
 [terminal_a]
 Modkeys=ctrl+alt+shift
 Hotkey=t
-Launch=cmd.exe
-Args=/c ".\scripts\terminal_a.bat"
+Launch=powershell
+Args=Start-Process wt -Verb runAs
 Hide=true
 
 #Locks the computer
 [lock]
 Modkeys=alt
 Hotkey=l
-Launch=cmd.exe
-Args=/c Rundll32.exe user32.dll,LockWorkStation
+Launch=powershell
+Args=Rundll32 user32.dll,LockWorkStation
 Hide=true
 
 #Media key scripts
@@ -200,7 +199,7 @@ Hide=true
 [next-track]
 Modkeys=ctrl+shift
 Hotkey=RIGHT
-Launch=powershell.exe
+Launch=powershell
 Args=-ExecutionPolicy RemoteSigned -File ".\scripts\next-track.ps1"
 Hide=true
 
@@ -208,7 +207,7 @@ Hide=true
 [previous-track]
 Modkeys=ctrl+shift
 Hotkey=LEFT
-Launch=powershell.exe
+Launch=powershell
 Args=-ExecutionPolicy RemoteSigned -File ".\scripts\previous-track.ps1"
 Hide=true
 
@@ -216,7 +215,7 @@ Hide=true
 [pause-track]
 Modkeys=ctrl+shift
 Hotkey=SPACE
-Launch=powershell.exe
+Launch=powershell
 Args=-ExecutionPolicy RemoteSigned -File ".\scripts\pause-track.ps1"
 Hide=true
 
@@ -227,6 +226,6 @@ Hide=true
 #[test]
 #Modkeys=alt
 #Hotkey=F13
-#Launch=notepad.exe
+#Launch=notepad
 
 
